overflow fix

--- a/frontend/src/about/About.scss
+++ b/frontend/src/about/About.scss
@@ -1,5 +1,5 @@
 .about-page {
   border: 1px solid pink;
   max-height: 100%;
-  overflow: scroll;
+  overflow-y: scroll;
 }
